--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -55,9 +55,12 @@
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
-      </div>
-      <p>Explore here.</p>
+      <p>Create</p>
+      <p>Customize</p>
+      <p>Share</p>
+      <h3>Your portfolio.</h3>
     </div>
+  </div>
 </main>
 
 <router-outlet />
