--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -41,11 +41,11 @@
     <h2>Testimonials</h2>
     <div>
       <img src="rock.png" alt="Testimonial 1">
-      <p>"He learns anything you throw at him. Became our onsite sexologist in half a week."</p>
+      <p>"He takes in and learns anything you throw at him. Became our onsite sexologist in half a week."</p>
     </div>
     <div>
       <img src="obama.png" alt="Testimonial 2">
-      <p>"Wish I could have him back here again. Nobody else around here tells racist jokes like that!"</p>
+      <p>"Wish I could have him back here again. Nobody else around here tells good racist jokes like that! He gets my pass."</p>
     </div>
   </div>
 </section>
@@ -53,7 +53,7 @@
 <section>
   <div class="container">
     <h2>Site Feedback</h2>
-    <p>To submit feedback for improvements with ProfileMe, use the prompt below:</p>
+    <p>For inqueries or to submit feedback, use the prompt below:</p>
     <br>
     <form onsubmit="showDialog(event)">
       <p class="label">Name:</p>
