--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -54,8 +54,15 @@ h1 {
 }
 
 p {
-  margin: 0;
+  margin-bottom: 29px;
   color: var(--gray-700);
+}
+
+h3 {
+  font-size: 2.5rem;
+  color: var(--gray-700);
+  margin-bottom: 0px;
+  margin-top: 20px;
 }
 
 main {
@@ -80,8 +87,8 @@ main {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  max-width: 700px;
-  margin-bottom: 3rem;
+  max-width: 800px;
+  margin-bottom: 1rem;
   margin-right: 20px;
 }
 
@@ -97,6 +104,8 @@ main {
   width: 1px;
   background: var(--red-to-pink-to-purple-vertical-gradient);
   margin-inline: 0.5rem;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .pill-group {
@@ -154,6 +163,11 @@ main {
 
 .left-side .images svg{
   margin-right: 30px;
+}
+
+.right-side {
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .social-links {
