--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -5,13 +7,13 @@ body {
 }
 
 header {
-  background-color: #f2f2f2;
-  text-align: center;
+  background-color: #525252;
+  padding: .7rem 0;
 }
 
 nav {
-  background-color: #525252;
-  padding: 10px;
+  margin: 0 auto;
+  padding: 0px;
 }
 
 nav ul {
@@ -27,19 +29,19 @@ nav ul li {
 }
 
 nav ul li a {
+  font-family: 'Roboto', sans-serif;
   color: #fff;
   text-decoration: none;
   font-weight: bold;
-  padding: 5px;
+  padding: 10px;
   border-radius: 3px;
-}
-
-nav ul li a:hover {
-  background-color: #555;
+  &:hover, &.active {
+    background-color: #34495e;
+  }
 }
 
 section {
-  padding: 50px;
+  padding: 100px;
   background-color: #f9f9f9;
   text-align: center;
 }
