--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -11,7 +11,7 @@
 }
 
 .resume-container {
-  max-width: 800px;
+  max-width: 825px;
   margin: 0 auto;
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -67,11 +67,50 @@ section {
   background-color: #f9f9f9;
 }
 
-.experience-item, .education-item {
+.experience-item {
   margin-bottom: 1.5rem;
 
   &:last-child {
     margin-bottom: 0;
+  }
+}
+
+.resume-education {
+  .education-item {
+    margin-bottom: 1rem;
+  }
+
+  .education-header {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+  }
+
+  .degree {
+    margin: 0;
+    margin-right: 1rem;
+    font-size: 1.1em;
+  }
+
+  .education-details {
+    margin: 0;
+  }
+
+  .focus {
+    font-style: italic;
+    color: #666;
+    margin: 0rem;
+  }
+
+  .institution {
+    margin: 0;
+    line-height: 1.4;
+  }
+
+  .gpa {
+    font-style: italic;
+    color: #7f8c8d;
+    margin-left: 1rem;
   }
 }
 
