new pages and footer

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -72,28 +72,28 @@
     <div class="footer-content">
       <div class="footer-column">
         <h3>About</h3>
-        <p><a href="about.html">About Me</a></p>
-        <p><a href="technologies.html">Our Technologies</a></p>
-        <p><a href="about.html">Company History</a></p>
+        <p><a [routerLink]="['/about']">My Resume</a></p>
+        <p><a [routerLink]="['/technologies']">Technologies</a></p>
+        <p><a [routerLink]="['/projects']">Projects</a></p>
       </div>
       <div class="footer-column">
         <h3>Services</h3>
-        <p>Graphs</p>
-        <p>Websites</p>
+        <p>Data Science</p>
+        <p>Profile Builder</p>
         <p>Applications</p>
       </div>
       <div class="footer-column">
         <h3>Contact</h3>
         <p>Email: jamestest&#64;gmail.com</p>
         <p>Phone: 123-456-7890</p>
-        <p>Address: Unfortunately not at home</p>
+        <p>Location: Austin, TX</p>
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2023 ProfileMe™. All rights not reserved. Personality likeness is of no genuine indication of figures or their opinions.</p>
+      <p>&copy; 2024 ProfileMe™. All rights not reserved. Personality likeness is of no genuine indication of figures or their opinions.</p>
       <p>Data accuracy not guaranteed</p>
       <p><a href="#" class="footer-link" data-alert="We collect no data from our users. Usage of this site infers understanding of our terms of service.">Privacy Policy</a> |
-        <a href="#" class="footer-link" data-alert="Experiments claims no ownership over displayed assets from our web view. Experiments reserves rights under 'Fair Use.' Furthermore, the user understands this project is not sponsored or endorsed by any genuine company or identity.">Terms of Service</a>
+        <a href="#" class="footer-link" data-alert="ProfileMe claims no ownership over displayed assets from our web view. ProfileMe reserves rights under 'Fair Use.' Furthermore, the user understands this project is not sponsored or affiliated with any genuine company or identity.">Terms of Service</a>
       </p>
     </div>
   </div>
