--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -76,6 +76,10 @@ section {
 }
 
 .resume-education {
+  h4 {
+    color: #34495e;
+  }
+
   .education-item {
     margin-bottom: 1rem;
   }
@@ -84,12 +88,19 @@ section {
     display: flex;
     align-items: baseline;
     flex-wrap: wrap;
+    line-height: 0.0;
   }
 
   .degree {
     margin: 0;
     margin-right: 1rem;
     font-size: 1.1em;
+  }
+
+  .gpa {
+    font-style: italic;
+    color: #7f8c8d;
+    margin-left: 1rem;
   }
 
   .education-details {
@@ -105,12 +116,6 @@ section {
   .institution {
     margin: 0;
     line-height: 1.4;
-  }
-
-  .gpa {
-    font-style: italic;
-    color: #7f8c8d;
-    margin-left: 1rem;
   }
 }
 
@@ -182,7 +187,8 @@ ul {
   nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-weight: bold;
+    font-size: 1.2rem;
+    // font-weight: bold;
     padding: 10px;
     border-radius: 3px;
     
@@ -190,6 +196,12 @@ ul {
   
   nav ul li a:hover {
     background-color: #34495e;
+  }
+
+  .container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
   }
 
   footer {
@@ -202,6 +214,7 @@ ul {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-left: 150px;
   }
   
   .footer-column {
@@ -233,4 +246,3 @@ ul {
     color: #272ad6;
     text-decoration: underline;
   }
-  
