--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -32,7 +32,8 @@ nav ul li a {
   font-family: 'Roboto', sans-serif;
   color: #fff;
   text-decoration: none;
-  font-weight: bold;
+  font-size: 1.2rem;
+  // font-weight: bold;
   padding: 10px;
   border-radius: 3px;
   &:hover, &.active {
@@ -66,7 +67,7 @@ section img {
 }
 
 .container {
-  max-width: 960px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
 }
@@ -142,7 +143,7 @@ section p.label {
 }
 
 section img {
-  max-width: 100px; /* Adjust the maximum width as desired */
+  max-width: 100px;
   height: auto;
   margin-top: 30px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -159,6 +160,7 @@ footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding-left: 150px;
 }
 
 .footer-column {
