--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -65,7 +65,7 @@
   }
   
   .container {
-    max-width: 960px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
   }
@@ -158,6 +158,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-left: 150px;
   }
   
   .footer-column {
