--- a/src/app/components/technologies/technologies.component.scss
+++ b/src/app/components/technologies/technologies.component.scss
@@ -65,7 +65,7 @@
   }
   
   .container {
-    max-width: 960px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
   }
@@ -158,6 +158,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-left: 150px;
   }
   
   .footer-column {
@@ -189,4 +190,3 @@
     color: #272ad6;
     text-decoration: underline;
   }
-  
