change img path for test

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -47,7 +47,7 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <img src="/springboot.png">
+      <img src="/Profiler/springboot.png">
       </div>
       <h1>Welcome, Guest!</h1>
       <p>This personal web page is powered by Angular, Spring Boot</p>
