--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -73,7 +73,7 @@ section img {
 }
 
 .hero {
-  background-image: url('../../../../docs/banner2.png');
+  background-image: url('/docs/banner2.png');
   background-size: cover; /* Ensure the image fits within the container */
   background-position: center;
   background-repeat: no-repeat; /* Prevent the image from repeating */
