remove html lines

--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -165,6 +165,10 @@ main {
   margin-right: 30px;
 }
 
+.left-side .images img{
+  margin-top: 4px;
+}
+
 .right-side {
   font-size: 24px;
   font-weight: bold;
