change path again

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -73,7 +73,7 @@ section img {
 }
 
 .hero {
-  background-image: url(var(--image-path));
+  background-image: url('banner2.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
