add more screens

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,10 +17,7 @@
   </nav>
 </header>
 
-<section class="hero">
-  <div class="container">
-    <h1></h1>
-  </div>
+<section class="container_banner">
 </section>
 
 <section>
