--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -15,8 +15,10 @@
   </nav>
 </header>
 
-
-
+<section>
+  <p><i>Page under construction.</i></p>
+  <p><i>Thank you for your understanding.</i></p>
+</section>
 
 <footer>
   <div class="container">
