--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -182,6 +182,7 @@ ul {
   
   nav ul li {
     margin: 0 10px;
+    padding-top: 2px;
   }
   
   nav ul li a {
@@ -191,7 +192,7 @@ ul {
     // font-weight: bold;
     padding: 10px;
     border-radius: 3px;
-    
+    padding-bottom: 11px;
   }
   
   nav ul li a:hover {
