--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -8,7 +8,8 @@ body {
 
 header {
   background-color: #525252;
-  padding: .7rem 0;
+  height: 25px;
+  padding: .75rem 0;
 }
 
 nav {
@@ -26,6 +27,7 @@ nav ul {
 
 nav ul li {
   margin: 0 10px;
+  padding-top: 1px;
 }
 
 nav ul li a {
@@ -33,8 +35,9 @@ nav ul li a {
   color: #fff;
   text-decoration: none;
   font-size: 1.2rem;
-  // font-weight: bold;
   padding: 10px;
+  border-radius: 3px;
+  padding-bottom: 10px;
   border-radius: 3px;
   &:hover, &.active {
     background-color: #34495e;
@@ -69,7 +72,15 @@ section img {
 .container {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
+}
+
+.container_banner {
+  background-image: url('banner2.png');
+  background-position: center;
+  min-height: 200px;
+  display: flex;
+  justify-content: center;
 }
 
 .hero {
@@ -77,8 +88,9 @@ section img {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-radius: 0 0 10px 10px;
-  height: 200px;
+  // border-radius: 0 0 10px 10px;
+  padding-top: 0px;
+  margin-top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
