--- a/src/app/components/technologies/technologies.component.scss
+++ b/src/app/components/technologies/technologies.component.scss
@@ -1,8 +1,9 @@
 :host {
-    display: block;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  color: #333;
+  line-height: 1.6;
+  background-color: #f4f4f4;
   }
   
   header {
@@ -13,6 +14,7 @@
   nav {
     background-color: #525252;
     padding: 10px;
+    padding: .5rem 0;
   }
   
   nav ul {
@@ -25,105 +27,31 @@
   
   nav ul li {
     margin: 0 10px;
+    padding-top: 2px;
   }
   
   nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-weight: bold;
-    padding: 5px;
+    font-size: 1.2rem;
+    // font-weight: bold;
+    padding: 10px;
     border-radius: 3px;
+    padding-bottom: 11px;
   }
   
   nav ul li a:hover {
-    background-color: #555;
+    background-color: #34495e;
   }
   
   section {
     padding: 50px;
-    background-color: #f9f9f9;
+    background-color: #f9f9f9dc;
+    min-height: 400px;
     text-align: center;
+    align-content: center;
   }
-  
-  section h2 {
-    color: #333;
-    margin-bottom: 20px;
-    font-size: 24px;
-  }
-  
-  section p {
-    color: #665;
-    line-height: 1.6;
-  }
-  
-  section img {
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-  }
-  
-  .container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .hero {
-    background-image: url('/banner2.png');
-    background-size: cover; /* Ensure the image fits within the container */
-    background-position: center;
-    background-repeat: no-repeat; /* Prevent the image from repeating */
-    border-radius: 0 0 10px 10px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-  }
-  
-  .hero h1 {
-    font-size: 48px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    text-align: center;
-  }
-  
-  .testimonial {
-    background-color: #f5f5f5;
-    padding: 40px;
-    text-align: center;
-  }
-  
-  .testimonial p {
-    font-style: italic;
-    color: #777;
-    line-height: 1.6;
-    margin-bottom: 20px;
-  }
-  
-  .testimonial img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  
-  form {
-    text-align: left;
-  }
-  
-  form label,
-  form textarea {
-    display: block;
-    width: 100%;
-  }
-  
-  form textarea {
-    height: 100px;
-  }
-  
+
   section p {
     color: #666;
     line-height: 1.6;
@@ -133,19 +61,10 @@
     margin: 0 auto;
   }
   
-  section p.label {
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: left;
-    color: #575656;
-  }
-  
-  section img {
-    max-width: 100px; /* Adjust the maximum width as desired */
-    height: auto;
-    margin-top: 30px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+  .container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
   }
   
   footer {
