--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -59,7 +59,6 @@
     color: #fff;
     text-decoration: none;
     font-size: 1.2rem;
-    // font-weight: bold;
     padding: 10px;
     border-radius: 3px;
     padding-bottom: 11px;
@@ -88,7 +87,7 @@
       display: block;
       width: 50px;
       height: 3px;
-      background-color: #007bff;
+      background-color: #34495e;
       margin: 0.5rem auto 0;
     }
   }
@@ -109,8 +108,15 @@
     transition: all 0.3s ease;
     
     &:hover {
-      transform: translateY(-5px);
+      transform: translateY(-2px);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    &.expanded {
+      height: auto;
+      max-height: 80vh;
+      display: flex;
+      flex-direction: column;
     }
   }
   
@@ -121,6 +127,8 @@
       height: 100%;
       display: flex;
       flex-direction: column;
+      padding-top: .01rem;
+      overflow-y: auto;
     }
   }
   
@@ -167,7 +175,7 @@
   
   .project-button {
     display: inline-block;
-    background-color: #007bff;
+    background-color: #3498db;
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
@@ -178,7 +186,7 @@
     font-family: 'Poppins', sans-serif;
     
     &:hover {
-      background-color: #0056b3;
+      background-color: #34495e;
     }
   }
   
