--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 :host {
   display: block;
@@ -78,7 +79,7 @@
   .section-title {
     text-align: center;
     font-size: 2.5rem;
-    color: #333;
+    color: #34495e;
     margin-bottom: 3rem;
     position: relative;
     
