--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -134,10 +134,12 @@
   }
   
   .project-image {
-    height: 200px;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
     background-size: cover;
     background-position: center;
-    margin: 0rem 0rem 0rem 0rem;
+    background-repeat: no-repeat;
   }
   
   .project-title {
