--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -140,6 +140,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border: 3px solid red;
   }
   
   .project-title {
