--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -135,12 +135,19 @@
   
   .project-image {
     width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    border: 3px solid red;
+    padding-top: 56.25%; // This maintains a 16:9 aspect ratio
+    position: relative;
+    overflow: hidden;
+  }
+
+  .project-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; // This will make the image cover the area while maintaining aspect ratio
+    object-position: center; // This centers the image
   }
   
   .project-title {
