more random changes to button

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -104,6 +104,7 @@
   .project-card {
     background-color: #fff;
     border-radius: 8px;
+    min-width: 300px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
@@ -198,6 +199,7 @@
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     margin-top: auto;
+    margin-bottom: 1rem;
     align-self: flex-start;
     
     &:hover {
