change bottom margin

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -199,7 +199,7 @@
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     margin-top: auto;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     align-self: flex-start;
     
     &:hover {
