--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -125,6 +125,7 @@
   
   .project-content {
     padding: 1.5rem;
+    margin-bottom: .3rem;
     
     &.expanded {
       height: 100%;
@@ -132,6 +133,7 @@
       flex-direction: column;
       flex-grow: 1; // The new stuff I added here
       padding-top: .01rem;
+      margin-bottom: .3rem;
       overflow-y: auto;
     }
   }
@@ -199,8 +201,8 @@
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     margin-top: auto;
-    margin-bottom: .5rem;
-    align-self: flex-start;
+    // margin-bottom: .5rem;
+    // align-self: flex-start;
     
     &:hover {
       background-color: #34495e;
