--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -104,7 +104,7 @@
   .project-card {
     background-color: #fff;
     border-radius: 8px;
-    min-width: 300px;
+    min-width: 350px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
@@ -171,7 +171,7 @@
     flex-wrap: wrap;
     gap: 0.5rem;
     margin-top: auto; // The new stuff I added here
-    margin-bottom: 1rem; // The new stuff I added here
+    margin-bottom: .3rem; // The new stuff I added here
   }
   
   .tag {
@@ -200,9 +200,9 @@
     border: none;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    // margin-top: auto;
-    // margin-bottom: .5rem;
-    align-self: flex-end; //used to be flex-start
+    margin-top: auto;
+    // margin-bottom: .3rem;
+    align-self: start-start;
     
     &:hover {
       background-color: #34495e;
