change top margin button

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -199,7 +199,7 @@
     border: none;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    margin-top: auto;
+    margin-top: 1rem;
     // margin-bottom: .3rem;
     align-self: start-start;
     
