--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -124,6 +124,9 @@
   
   .project-content {
     position: relative;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
     padding: 1.5rem;
     margin-bottom: .3rem;
     
@@ -137,7 +140,7 @@
       overflow-y: auto;
     }
   }
-  
+
   .project-image {
     width: 100%;
     position: relative;
@@ -190,10 +193,20 @@
   }
   
   .project-button {
-    position: absolute;
+    display: inline-block;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+    border: none;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
     bottom: 1rem;
-    left: 1rem;
-    right: 1rem;
+    // margin-top: 1rem;
+    // margin-bottom: .3rem;
+    align-self: start-start;
     
     &:hover {
       background-color: #34495e;
