--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -123,22 +123,10 @@
   }
   
   .project-content {
-    position: relative;
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
-    margin-bottom: .3rem;
-    
-    &.expanded {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      flex-grow: 1; // The new stuff I added here
-      padding-top: .01rem;
-      margin-bottom: .3rem;
-      overflow-y: auto;
-    }
+    overflow-y: auto; // Allow scrolling if content exceeds card height
   }
 
   .project-image {
