--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -118,6 +118,12 @@
       transform: translateY(-2px);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
     }
+
+    &.expanded {
+      max-height: 80vh;
+      display: flex;
+      flex-direction: column;
+    }
   }
   
   // .project-card {
