--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -228,7 +228,7 @@
     border: none;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    bottom: 1rem;
+    // bottom: rem;
     // margin-top: 1rem;
     // margin-bottom: .3rem;
     align-self: start-start;
