--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -149,19 +149,19 @@
   
   .project-content {
     position: relative;
-    flex: 1;
+    // flex: 1;
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
-    margin-bottom: .3rem;
+    margin-bottom: .5rem;
     
     &.expanded {
       height: 100%;
       display: flex;
       flex-direction: column;
-      flex-grow: 1;
-      padding-top: .01rem;
-      margin-bottom: .3rem;
+      // flex-grow: 1;
+      // padding-top: .01rem;
+      // margin-bottom: .3rem;
       overflow-y: auto;
     }
   }
