--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -161,7 +161,7 @@
       flex-direction: column;
       // flex-grow: 1;
       // padding-top: .01rem;
-       margin-bottom: .3rem;
+      margin-bottom: .3rem;
       overflow-y: auto;
     }
   }
@@ -229,7 +229,7 @@
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     // bottom: rem;
-    // margin-top: 1rem;
+    margin-top: 1rem;
     // margin-bottom: .3rem;
     align-self: start-start;
     
