--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -228,8 +228,8 @@
     border: none;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
-    // bottom: rem;
-    margin-top: 1rem;
+    bottom: 1rem;
+    margin-top: 1.5rem;
     // margin-bottom: .3rem;
     align-self: start-start;
     
