--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -222,7 +222,7 @@
     background-color: #3498db;
     color: #fff;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    padding: 0 1rem;
     border-radius: 4px;
     transition: background-color 0.3s ease;
     border: none;
