--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -154,6 +154,8 @@
     flex-direction: column;
     padding: 1.5rem;
     margin-bottom: .5rem;
+    border-radius: 8px;
+    border-color: red;
     
     &.expanded {
       height: 100%;
@@ -222,7 +224,7 @@
     background-color: #3498db;
     color: #fff;
     text-decoration: none;
-    padding: 0 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 4px;
     transition: background-color 0.3s ease;
     border: none;
