--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -153,9 +153,9 @@
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
+    border: 1px solid #000000;
     margin-bottom: .5rem;
     border-radius: 8px;
-    border-color: red;
     
     &.expanded {
       height: 100%;
