--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -149,7 +149,7 @@
   
   .project-content {
     position: relative;
-    // flex: 1;
+    flex: 1;
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
@@ -162,7 +162,6 @@
       display: flex;
       flex-direction: column;
       // flex-grow: 1;
-      
       // padding-top: .01rem;
       margin-bottom: .3rem;
       overflow-y: auto;
