--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -111,7 +111,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-bottom: 1.0rem; // Space for the button
+    // padding-bottom: 1.0rem;
     box-sizing: border-box;
 
     &:hover {
@@ -154,7 +154,6 @@
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
-    border: 1px solid #000000;
     margin-bottom: .5rem;
     border-radius: 8px;
     
