--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -170,18 +170,18 @@
 
   .project-image {
     width: 100%;
-    position: relative;
-    overflow: hidden;
+    // position: relative;
+    // overflow: hidden;
   }
 
   .project-image img {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    object-position: center;
+    // width: 100%;
+    // height: 100%;
+    // object-fit: contain;
+    // object-position: center;
   }
   
   .project-title {
