--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -146,8 +146,8 @@
 
   .project-image {
     width: 100%;
-    // position: relative;
-    // overflow: hidden;
+    position: relative;
+    overflow: hidden;
   }
 
   .project-image img {
@@ -156,8 +156,8 @@
     left: 0;
     // width: 100%;
     // height: 100%;
-    // object-fit: contain;
-    // object-position: center;
+    object-fit: contain;
+    object-position: center;
   }
   
   .project-title {
