--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -128,7 +128,7 @@
   .project-content {
     position: relative;
     flex: 1;
-    height: 100%;
+    // height: 100%;
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
