--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,11 +36,11 @@
     <h2>Testimonials</h2>
     <div>
       <img src="rock.png" alt="Testimonial 1">
-      <p>"He takes in and learns anything you throw at him. Became our onsite sexologist in half a week."</p>
+      <p>"He takes in anything you throw at him. Would be frankly gross negilence to evaluate him equivalent to a bunch of people about to get performance fired. Haha. Can't imagine that happening though."</p>
     </div>
     <div>
       <img src="obama.png" alt="Testimonial 2">
-      <p>"Wish I could have him back here again. Nobody else around here tells good racist jokes like that! He gets my pass."</p>
+      <p>"I can't imagine a better person to have on my team. I would have had him in the White House if his company wasn't so dedicated to talent retention."</p>
     </div>
   </div>
 </section>
