--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -97,7 +97,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 2rem;
-    max-width: 1300px;
+    max-width: 1350px;
     margin: 0 auto;
   }
 
@@ -146,7 +146,7 @@
 
   .project-image {
     width: 100%;
-    padding-top: 56.25%;
+    // padding-top: 56.25%;
     position: relative;
     overflow: hidden;
   }
