--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -146,9 +146,10 @@
 
   .project-image {
     width: 100%;
-    // padding-top: 56.25%;
+    padding-top: 56.25%;
     position: relative;
     overflow: hidden;
+    margin-bottom: 0rem;
   }
   
   .project-image img {
