--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -196,6 +196,10 @@
     margin-bottom: 1rem;
     flex-grow: 1;
   }
+
+  .additional-info-header {
+    margin-bottom: 0rem;
+  }
   
   .project-button {
     display: inline-block;
