--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -39,8 +39,8 @@
       <p>"Exceeds expectations. It would be downright negligent to rate his performance similar to a bunch of people on the brink of being performance-fired. Haha, as if that could ever happen!"</p>
     </div>
     <div>
-      <img src="obama.png" alt="Testimonial 2">
-      <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his company wasn't so dedicated to talent retention."</p>
+      <img src="biden.png" alt="Testimonial 2">
+      <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his company wasn't so dedicated to talent retention... What network is this? How did I get here?"</p>
     </div>
   </div>
 </section>
