--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -49,8 +49,8 @@
       </svg>
       <img src="springboot.png">
       </div>
-      <h1>Welcome, Guest!</h1>
-      <p>This personal web page is powered by Angular, Spring Boot</p>
+      <h1>Welcome, Visitor!</h1>
+      <p>This mock product personal web page is powered by Angular, Spring Boot</p>
       <p>Opportunities await! 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
@@ -58,7 +58,7 @@
       <p>Create</p>
       <p>Customize</p>
       <p>Share</p>
-      <h3>Your portfolio.</h3>
+      <h3>Your portfolio. (Coming soon)</h3>
     </div>
   </div>
 </main>
