--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,7 +40,7 @@
     </div>
     <div>
       <img src="biden.png" alt="Testimonial 2">
-      <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his company wasn't so dedicated to talent retention... What network is this? How did I get here?"</p>
+      <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his company wasn't so dedicated to talent retention... What network is this? Where am I?"</p>
     </div>
   </div>
 </section>
