--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,11 +36,13 @@
     <h2>Testimonials</h2>
     <div>
       <img src="rock.png" alt="Testimonial 1">
-      <p>"Exceeds expectations. It would be downright negligent to rate his performance similar to a bunch of people on the brink of being performance-fired. Haha, as if that could ever happen!"</p>
+      <p>"Exceeds expectations. It would be downright negligent to rate his performance similar to a bunch of people on the brink of being fired. Haha, as if that could ever happen!"</p>
+      <p>- A rock</p>
     </div>
     <div>
       <img src="biden.png" alt="Testimonial 2">
-      <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his company wasn't so dedicated to talent retention... What network is this? Where am I?"</p>
+      <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his current company wasn't so dedicated to talent retention... What network is this? Where am I?"</p>
+      <p>- Man I found walking outside my apartment</p>
     </div>
   </div>
 </section>
