--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,10 @@
 
 <section class="testimonial">
   <div class="container">
-    <h2>Testimonials</h2>
+    <br>
+    <p><i>Page under construction.</i></p>
+    <p><i>Thank you for your understanding.</i></p>
+    <!-- <h2>Testimonials</h2>
     <div>
       <img src="rock.png" alt="Testimonial 1">
       <p>"Exceeds expectations. It would be downright negligent to rate his performance similar to a bunch of people on the brink of being fired. Haha, as if that could ever happen!"</p>
@@ -43,7 +46,7 @@
       <img src="biden.png" alt="Testimonial 2">
       <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his current company wasn't so dedicated to talent retention... What network is this? Where am I?"</p>
       <p>- Man I found walking outside my apartment</p>
-    </div>
+    </div> -->
   </div>
 </section>
 
@@ -81,8 +84,8 @@
       </div>
       <div class="footer-column">
         <h3>Contact</h3>
-        <p>Email: jamestest&#64;gmail.com</p>
-        <p>Phone: 123-456-7890</p>
+        <p>Email: james.f.logan2&#64;gmail.com</p>
+        <p>Phone: <i>Redacted</i></p>
         <p>Location: Austin, TX</p>
       </div>
     </div>
