--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -37,8 +37,8 @@
       </div>
       <div class="footer-column">
         <h3>Contact</h3>
-        <p>Email: jamestest&#64;gmail.com</p>
-        <p>Phone: 123-456-7890</p>
+        <p>Email: james.f.logan2&#64;gmail.com</p>
+        <p>Phone: <i>Redacted</i></p>
         <p>Location: Austin, TX</p>
       </div>
     </div>
