change info footer

--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -43,7 +43,8 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2024 ProfileMe™. All rights not reserved. Personality likeness is of no genuine indication of figures or their opinions.</p>
+      <p>&copy; 2024 ProfileMe™. All rights not reserved.</p>
+      <!-- Personality likeness is of no genuine indication of figures or their opinions.</p> -->
       <p>Data accuracy not guaranteed</p>
       <p><a href="#" class="footer-link" data-alert="We collect no data from our users. Usage of this site infers understanding of our terms of service.">Privacy Policy</a> |
         <a href="#" class="footer-link" data-alert="ProfileMe claims no ownership over displayed assets from our web view. Statements shown are not representative of any personality or company. ProfileMe reserves rights under 'Fair Use.' Furthermore, the user understands this project is not sponsored or affiliated with any genuine company or identity.">Terms of Service</a>
