--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -45,7 +45,7 @@ nav ul li a {
 }
 
 section {
-  padding: 100px;
+  padding: 75px;
   background-color: #f9f9f9;
   text-align: center;
 }
@@ -69,6 +69,154 @@ section img {
   border-radius: 5px;
 }
 
+.profile-selector {
+  background-color: #f0f0f0;
+  padding: 55px 0;
+  font-size: 1.5rem;
+  color: #333;
+  
+  .container-profile {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    button {
+      padding: 10px 20px;
+      background-color: #34495e;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background-color 0.2s, transform 0.1s;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+      &:hover {
+        background-color: #0056b3;
+        transform: translateY(-1px);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      &:active {
+        transform: translateY(0);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
+
+  label {
+    margin-right: 10px;
+    font-weight: bold;
+  }
+
+  select {
+    padding: 5px 10px;
+    font-size: 16px;
+    border-radius: 5px;
+  }
+
+  .or-text {
+    margin: 0 10px;
+  }
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: linear-gradient(to bottom right, #ffffff, #535353);
+  border-radius: 8px;
+  width: 90%;
+  max-width: 400px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 8px;
+    padding: 2px;
+    mask-composite: exclude;
+    pointer-events: none;
+  }
+
+  .modal-content {
+    padding: 20px;
+
+    h2 {
+      margin-top: 0;
+      margin-bottom: 20px;
+      color: #333;
+      font-size: 1.5rem;
+    }
+
+    input {
+      width: calc(100% - 20px);
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+
+      &:focus {
+        outline: none;
+        border-color: #1b79df;
+        box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
+      }
+    }
+
+    .modal-buttons {
+      display: flex;
+      justify-content: flex-end;
+
+      button {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 1rem;
+        transition: background-color 0.2s;
+
+        &:first-of-type {
+          background-color: #5a6268;
+          color: white;
+          margin-right: 10px;
+
+          &:hover {
+            background-color: #34495e;
+          }
+        }
+
+        &:last-of-type {
+          background-color: #1b79df;
+          color: white;
+
+          &:hover {
+            background-color: #0056b3;
+          }
+        }
+      }
+    }
+  }
+}
+
 .container {
   max-width: 1000px;
   margin: 0 auto;
@@ -80,8 +228,12 @@ section img {
   margin: 0 auto;
   padding: 0px;
 
-  h3{
+  .custom-h3 {
     color: #333;
+    padding-top: 35px;
+    padding-bottom: 15px;
+    font-size: 1.3rem;
+    font-weight: bold;
   }
 
   img {
