--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,13 +6,14 @@
 </head>
 
 <body>
+  
 <header>
   <nav>
     <ul>
-      <li><a routerLink="/home">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/technologies">Technologies</a></li>
-      <li><a routerLink="/projects">Projects</a></li>
+      <li><a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+      <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+      <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li>
+      <li><a routerLink="/projects" routerLinkActive="active">Projects</a></li>
     </ul>
   </nav>
 </header>
