--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -63,10 +63,11 @@
     padding: 10px;
     border-radius: 3px;
     padding-bottom: 11px;
-  }
-  
-  nav ul li a:hover {
-    background-color: #34495e;
+
+    &:hover, &.active {
+      background-color: #34495e;
+      padding-bottom: 10px;
+    }
   }
 
   .projects-container {
