--- a/src/app/components/technologies/technologies.component.html
+++ b/src/app/components/technologies/technologies.component.html
@@ -7,10 +7,10 @@
 <header>
   <nav>
     <ul>
-      <li><a routerLink="/home">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/technologies">Technologies</a></li>
-      <li><a routerLink="/projects">Projects</a></li>
+      <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+      <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+      <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li>
+      <li><a routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Projects</a></li>
     </ul>
   </nav>
 </header>
