--- a/src/app/components/technologies/technologies.component.scss
+++ b/src/app/components/technologies/technologies.component.scss
@@ -34,14 +34,14 @@
     color: #fff;
     text-decoration: none;
     font-size: 1.2rem;
-    // font-weight: bold;
     padding: 10px;
     border-radius: 3px;
     padding-bottom: 11px;
-  }
-  
-  nav ul li a:hover {
-    background-color: #34495e;
+
+    &:hover, &.active {
+      background-color: #34495e;
+      padding-bottom: 10px;
+    }
   }
   
   section {
